samples/_failures_safe/1761721144_f43b98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7239454e.c: In function ‘main’:
./samples/SAFE/__tmp_7239454e.c:171:28: error: missing terminating " character
  171 |                     printf("Factorial: %.0f
      |                            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7239454e.c:171:21: error: expected expression at end of input
  171 |                     printf("Factorial: %.0f
      |                     ^~~~~~
./samples/SAFE/__tmp_7239454e.c:171:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7239454e.c:171:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7239454e.c:171:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7239454e.c:171:21: error: expected declaration or statement at end of input
